--- a/index.html
+++ b/index.html
@@ -107,8 +107,27 @@
         mouseY = e.clientY;
     });
 
+    canvas.addEventListener('touchstart', onTouchStart, { passive: false });
+    canvas.addEventListener('touchmove', onTouchMove, { passive: false });
+
+    function onTouchStart(e) {
+        e.preventDefault();
+        const touch = e.touches[0];
+        mouseX = touch.clientX;
+        mouseY = touch.clientY;
+    }
+
+    function onTouchMove(e) {
+        e.preventDefault(); 
+        const touch = e.touches[0];
+        mouseX = touch.clientX;
+        mouseY = touch.clientY;
+    }
+
     function getNumStars() {
-        if (window.innerWidth < 950) {
+        if (window.innerWidth < 600){
+            return 20;
+        } else if (window.innerWidth >= 600 && window.innerWidth < 950) {
             return 40;  
         } else {
             return 70;  
